; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_SH2DynarecReset.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_SH2DynarecReset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSH2 = common dso_local global i32* null, align 8
@master_cc = common dso_local global i64 0, align 8
@SSH2 = common dso_local global i32* null, align 8
@slave_ip = common dso_local global i8* null, align 8
@slave_cc = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SH2DynarecReset(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32*, i32** @MSH2, align 8
  %5 = icmp eq i32* %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i64 0, i64* @master_cc, align 8
  br label %7

7:                                                ; preds = %6, %1
  %8 = load i32*, i32** %2, align 8
  %9 = load i32*, i32** @SSH2, align 8
  %10 = icmp eq i32* %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %7
  store i8* null, i8** @slave_ip, align 8
  store i64 0, i64* @slave_cc, align 8
  br label %12

12:                                               ; preds = %11, %7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
